added configuration class and modules in pom.xml
however, implementing the example from the book is too much effort for a seemingly rather unpopular use case

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- spring modules -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-data</artifactId>
+        </dependency>
+
         <!-- optional spring boot starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
