oauth2 now working (some errors in index.html)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-server.port=8888
+#https://developer.okta.com/quickstart/#/okta-sign-in-page/java/spring
+okta.oauth2.issuer=https://dev-476350.okta.com/oauth2/default
+okta.oauth2.client-id=0oa1ugw1y5QIDlNzh357
+okta.oauth2.client-secret=rltBtmOECSaVD9gqHxlxhrHrT9nUFA1OsqrAmGzC
+okta.oauth2.redirect-uri=/authorization-code/callback
+#00-cx0nFAcIKo2JMvmBIjwNAGnO0ms496EINTmF08N
+#00LJKsp1_qIgG3_PjXwcbkJXybF566OSEgVXiXf1Ps
+#spring.thymeleaf.cache=false
