--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 server.port=8888
+
+spring.datasource.data=classpath:sql/data.sql
+spring.datasource.schema=classpath:sql/schema.sql
+
+#spring.datasource.url=jdbc:h2:file:/data/demo # falls die daten in einer datei gespeichert werden sollen
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+logging.level.root=INFO
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2_console
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.security.user.name=user
+spring.security.user.password=password
