added data objects to mssql with data/schema.sql + offered endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8888
+
+#docker run --rm -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=StrengGeheim!' -p 1433:1433 -d microsoft/mssql-server-linux:2017-latest
+spring.datasource.url=jdbc:sqlserver://localhost:1433
+spring.datasource.username=sa
+spring.datasource.password=StrengGeheim!
+
+spring.datasource.data=classpath:sql/data.sql
+spring.datasource.schema=classpath:sql/schema.sql
+
+spring.datasource.initialization-mode=always
+
+spring.jpa.hibernate.ddl-auto=none
