added validation of tables vs entitities
let hibernate check if tables created via SQL match the model @Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.schema=classpath:sql/schema.sql
 
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
