--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8888
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433
+spring.datasource.username=sa
+spring.datasource.password=StrengGeheim!
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.initialization-mode=always
+
+spring.jpa.hibernate.ddl-auto=none
