ergänzungen bzgl. user hinzugefügt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.enabled=true
+# hier muss ein entsprechender User in der DB vorhanden sein -> dann kann flyway die migrationen mit diesem user durchführen
+#spring.flyway.user=flyway-user
+#spring.flyway.password=flyway-password-123
 
 spring.datasource.initialization-mode=always
 
