--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8888
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=ab9320f2261edf
+spring.mail.password=ce29e31ae3c253
+
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.properties.mail.smtp.starttls.enable = true
