--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- irgendein Schwachsinn aus dem Springbootbuch -->
+        <!-- A fork of a fork (!) of SubEtha, an easy-to-use server-side SMTP library for Java. -->
         <dependency>
             <groupId>org.subethamail</groupId>
             <artifactId>subethasmtp</artifactId>
