--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 
         <!-- non-spring projects -->
         <dependency>
@@ -77,7 +81,10 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>${mssql-jdbc.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,7 +104,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <forkCount>5</forkCount>
+                            <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
                         </configuration>
                     </execution>
