--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8888
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+management.server.port=8889
+management.endpoints.web.exposure.include=beans,configprops,env,health,info,loggers,mappings,metrics
+management.endpoints.jmx.exposure.exclude=*
+
+info.description=@description@
+info.greeting=Hallo SK!
+info.version=@version@
