added custom metrics + contemplated README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,16 @@ server.port=8888
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 management.server.port=8889
 management.endpoints.web.exposure.include=beans,configprops,env,health,info,loggers,mappings,metrics
 management.endpoints.jmx.exposure.exclude=*
+
+management.endpoint.health.show-details=always
 
 info.description=@description@
 info.greeting=Hallo SK!
